--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="bg_red_checked">#88F22613</color>
     <color name="bg_gray">#f8f8f8</color>
     <color name="bg_transparent">#00000000</color>
-    <color name="bg_white">#ffffff</color>
+    <color name="bg_white">#ffffffff</color>
+    <color name="bg_tran_white">#88ffffff</color>
 </resources>
