--- a/res/layout/fragment_sort.xml
+++ b/res/layout/fragment_sort.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     <ListView 
-        android:id="@+id/lv_sort"
-		        
+        android:id="@+id/lv_jaccard"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
         
-        ></ListView>
-
-</FrameLayout>
+       ></ListView>
+	<wang.beats.views.ImageViewIntercept
+	    android:id="@+id/iv_plus"
+	    android:src="@drawable/plus"
+	    android:layout_width="64dp"
+	    android:layout_height="64dp"
+		android:scaleType="fitXY"
+		android:layout_alignParentBottom="true"	    
+		android:layout_alignParentRight="true"
+		android:layout_marginBottom="40dp"
+		android:layout_marginRight="24dp"
+		android:visibility="gone"
+	    />
+</RelativeLayout>
