--- a/res/layout/activity_recactivity.xml
+++ b/res/layout/activity_recactivity.xml
@@ -81,6 +81,17 @@
                     android:singleLine="true"
                     android:textColor="#ffffff"
                     android:textSize="14sp" />
+
+                <ImageView
+                    android:visibility="gone"
+                    android:id="@+id/iv_back_drawer"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/back" />
             </RelativeLayout>
 
             <LinearLayout
